--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A shopping compartor app",
   "main": "server.js",
   "scripts": {
+    "start": "ENV=prod node server.js",
+    "dev": "ENV=dev nodemon server.js",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "repository": {
@@ -20,6 +22,10 @@
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.19.1",
-    "husky": "^4.0.0"
+    "husky": "^4.0.0",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
