try to fix connexion btw docker and mongo

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.4.1",
     "node-fetch": "^2.6.0",
     "twig": "^1.14.0"
   }
