--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "consoapp",
+  "name": "consoapp-api",
   "version": "1.0.0",
   "description": "A shopping compartor app",
   "main": "server.js",
   "scripts": {
     "start": "ENV=prod node server.js",
     "dev": "ENV=dev nodemon server.js",
-    "lint": "eslint --ext .js --ignore-path .gitignore ."
+    "lint": "eslint --ext .js --ignore-path ../.gitignore ."
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,6 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "node-fetch": "^2.6.0",
-    "twig": "^1.14.0"
+    "node-fetch": "^2.6.0"
   }
 }
