--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,6 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
-    "node-fetch": "^2.6.0",
+    "node-fetch": "^2.6.0"
   }
 }
