--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "vue": "^2.6.10",
+    "vue-quaggajs": "^1.0.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
