--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
+    "mongoose": "^5.8.11",
     "node-fetch": "^2.6.0"
   }
 }
