--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.10",
     "vue-quaggajs": "^1.0.10",
     "vue-router": "^3.1.3",
+    "vue2-leaflet": "^2.4.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
