--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-quaggajs": "^1.0.10",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.4.3",
+    "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -23,9 +24,13 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "deepmerge": "^4.2.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "fibers": "^4.0.2",
     "lint-staged": "^9.5.0",
+    "sass": "^1.25.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
