--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "vue": "^2.6.10",
     "vue-quaggajs": "^1.0.10",
     "vue-router": "^3.1.3",
+    "vue-select": "^3.4.0",
     "vue2-leaflet": "^2.5.2",
+    "vuetify": "^2.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -27,7 +29,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.5.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.4",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
