--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,7 @@
     "axios": "^0.19.2",
     "leaflet": "^1.6.0",
     "vue": "^2.6.10",
-    "vue-quaggajs": "^1.0.10",
+    "vue-barcode-reader": "0.0.3",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.4.3",
     "vuetify": "^2.2.11",
