--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "easy-vue-leaflet": "^1.0.4",
     "leaflet": "^1.6.0",
     "vue": "^2.6.10",
     "vue-barcode-reader": "0.0.3",
